[project]
name = "upscaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.3.3",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "spandrel>=0.4.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "volcengine-python-sdk[ark]>=5.0.7",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
